--- a/src/app/main-content/how-to-order/how-to-order.component.html
+++ b/src/app/main-content/how-to-order/how-to-order.component.html
@@ -1,1 +1,19 @@
-<p>how-to-order works!</p>
+<section id="section2">
+    <h2 id="how-german">HOW TO ORDER</h2>
+
+    <div class="order">
+        <div>
+            <img class="food-graphic" src="assets/img/2_section_how_to_order/PNG/noodle.png" alt="noodle">
+            <p class="img-discription" id="img-discription-german1">Pick your <br> noodle</p>
+        </div>
+        <div>
+            <img class="food-graphic" src="assets/img/2_section_how_to_order/PNG/broth.png" alt="broth">
+            <p class="img-discription" id="img-discription-german2">Pick your <br> broth</p>
+        </div>
+
+        <div>
+            <img class="food-graphic" src="assets/img/2_section_how_to_order/PNG/egg.png" alt="egg">
+            <p class="img-discription" id="img-discription-german3">Add your <br> toppings</p>
+        </div>
+    </div>
+</section>
