--- a/src/app/main-content/our-menu/our-menu.component.html
+++ b/src/app/main-content/our-menu/our-menu.component.html
@@ -1,1 +1,66 @@
-<p>our-menu works!</p>
+<section id="section3">
+    <div class="menu" id="menu-scroll">
+        <h2 class="menu-h2" id="menu-h2-german">OUR MENU</h2>
+            <div class="menu-item1">
+                <img class="menu-img" src="assets/img/3_section_our_menu/Png/R1.png">
+                <div class="menu-discr1">
+                    <p class="menu-headline">Tonkotsu Ramen</p>
+                    <table class="menu-table">
+                        <tr>
+                            <td id="chicken-german1">CHICKEN</td>
+                            <td class="menu-price">11.95€</td>
+                        </tr>
+                        <tr>
+                            <td id="beef-german1">BEEF</td>
+                            <td class="menu-price">12.95€</td>
+                        </tr>
+                        <tr>
+                            <td id="shrimp-german1">SHRIMP</td>
+                            <td class="menu-price">13.95€</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="menu-item2">
+                <div class="menu-discr2">
+                    <p class="menu-headline">Spicy Miso Ramen</p>
+                    <table class="menu-table">
+                        <tr>
+                            <td id="chicken-german2">CHICKEN</td>
+                            <td class="menu-price">11.95€</td>
+                        </tr>
+                        <tr>
+                            <td id="beef-german2">BEEF</td>
+                            <td class="menu-price">12.95€</td>
+                        </tr>
+                        <tr>
+                            <td id="shrimp-german2">SHRIMP</td>
+                            <td class="menu-price">13.95€</td>
+                        </tr>
+                    </table>
+                </div>
+                <img class="menu-img" src="assets/img/3_section_our_menu/Png/R2.png" alt="">
+            </div>
+
+            <div class="menu-item1">
+                <img class="menu-img" src="assets/img/3_section_our_menu/Png/R3.png">
+                <div class="menu-discr1">
+                    <p class="menu-headline">Shio Ramen</p>
+                    <table class="menu-table">
+                        <tr>
+                            <td id="chicken-german3">CHICKEN</td>
+                            <td class="menu-price">11.95€</td>
+                        </tr>
+                        <tr>
+                            <td id="beef-german3">BEEF</td>
+                            <td class="menu-price">12.95€</td>
+                        </tr>
+                        <tr>
+                            <td id="shrimp-german3">SHRIMP</td>
+                            <td class="menu-price">13.95€</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+</section>
