--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<footer>
+    <div class="footer-logo">
+        <img src="assets/img/1_hero/PNG/sakura_logo.png" alt="sakura_logo">
+        <p class="footer-text">SAKURA RAMEN</p>
+    </div>
+    <div class="imprint">
+        <a href="#">Impressum</a>
+    </div>
+</footer>
