--- a/src/app/main-content/landingPage/landingPage.component.scss
+++ b/src/app/main-content/landingPage/landingPage.component.scss
@@ -9,11 +9,25 @@ section {
     height: 100vh;
     width: 100%;
     background-image: url('./../../../assets/img/1_hero/JPG/hero_bg.jpg');
+    background-position: 50% 50%;
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     background-size: cover;
+}
+
+@media(max-width: 1266px) {
+    h1 {
+        font-size: 56px;
+    }
+}
+
+@media(max-width: 960px) {
+    h2 {
+        font-size: 24px;
+        padding-top: 16px;
+    }
 }
 
