--- a/src/app/main-content/landingPage/navbar/navbar.component.scss
+++ b/src/app/main-content/landingPage/navbar/navbar.component.scss
@@ -52,3 +52,30 @@ nav {
         padding-left: 8px;
     }
 }
+
+@media(max-width: 1266px) {
+    .hide-mobile {
+        display: none;
+    }
+}
+
+@media(max-width: 770px) {
+    nav {
+        flex-direction: column;
+        gap: 32px;
+        padding-left: 24px;
+        padding-right: 24px;
+
+        .phone-btn {
+            font-size: 16px;
+            margin: 16px;
+        }
+        .phone-img {
+            height: 16px;
+            width: 16px;
+        }
+        .language {
+            padding-left: 6px;
+        }
+    }
+}
