--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,1 +1,18 @@
-<p>imprint works!</p>
+
+    <div class="imprint">
+        <h1>Impressum</h1>
+        <h2>Angaben gemäß § 5 TMG:</h2>
+        <p><br>Philip Schaper</p>
+        <h3>Postanschrift:</h3>
+        <p>Rutnikstaße 18<br>10367 Berlin<br></p>
+        <h3>Kontakt:</h3>
+        <p>E-Mail: ph.git&#64;mailbox.org</p>
+        <p></p>
+        <p><br></p>
+        <p></p>
+        <h2>Hinweise zur Website</h2>
+        <p></p>
+        <p><em>Das Impressum wurde mit dem <a
+                    href="https://www.activemind.de/datenschutz/generatoren/impressum/">Impressums-Generator der
+                    activeMind AG</a> erstellt.</em></p>
+    </div>
