--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -1,8 +1,9 @@
-/* .main-container {
-    background-image: url(./../../../assets/img/3_section_our_menu/JPG/section_our_menu_bg.jpg);
+.imprint {
+    font-family: Raleway, sans-serif;
+    background-image: url(./../../assets/img/3_section_our_menu/JPG/section_our_menu_bg.jpg);
     padding-right: 160px;
     padding-left: 160px;
     padding-top: 120px;
     padding-bottom: 120px;
     box-sizing: border-box;
-} */
+}
