--- a/src/app/main-content/how-to-order/how-to-order.component.scss
+++ b/src/app/main-content/how-to-order/how-to-order.component.scss
@@ -43,3 +43,14 @@
         }
     }
 }
+
+@media(max-width: 960px) {
+    .order {
+        flex-direction: column;
+        gap: 24px;
+    }
+
+    .img-discription {
+        font-size: 20px;
+    }
+}
