--- a/src/app/main-content/our-menu/our-menu.component.scss
+++ b/src/app/main-content/our-menu/our-menu.component.scss
@@ -11,6 +11,7 @@
         flex-direction: column;
 
         h2 {
+            font-size: 48px;
             display: flex;
             justify-content: center;
             margin-bottom: 8px;
@@ -33,7 +34,7 @@
         }
         
         .menu-discr1 {
-            margin-left: 80px;
+            padding-left: 80px;
             display: flex;
             flex-direction: column;
             font-family: Economica, sans-serif;
@@ -42,7 +43,7 @@
         }
         
         .menu-discr2 {
-            margin-right: 80px;
+            padding-right: 80px;
             display: flex;
             flex-direction: column;
             font-family: Economica, sans-serif;
@@ -66,6 +67,52 @@
         .menu-price {
             padding-left: 168px;
         }
+    }
+}
+
+@media(max-width: 960px) {
+    #section3 {
+        display: flex;
+        justify-content: center; 
+        padding-left: 24px;
+        padding-right: 24px;
+
+        h2 {
+            font-size: 40px;
+        }
+    }
+
+    .menu-item1 {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu-item2 {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    .menu-img {
+        width: 200px;
+        aspect-ratio: 1 / 1;
+    }
+
+    .menu-discr1 {
+        padding-left: 0;
+        font-size: 40px;
+    }
+
+    .menu-discr2 {
+        padding-right: 0px;
+        font-size: 48px;
+    }
+
+    .menu-table{
+        font-size: 24px;
+    }
+
+    .menu-price {
+        padding-left: 16px;
     }
 }
 
