mixin in style.scss

--- a/src/app/main-content/how-to-order/how-to-order.component.html
+++ b/src/app/main-content/how-to-order/how-to-order.component.html
@@ -1,4 +1,4 @@
-<section id="section2">
+<section class="section2" id="how_to_order">
     <h2 id="how-german">HOW TO ORDER</h2>
 
     <div class="order">
