--- a/src/app/main-content/landingPage/navbar/navbar.component.html
+++ b/src/app/main-content/landingPage/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <nav>
     <img class="sakura_logo1" src="assets/img/1_hero/PNG/sakura_logo.png" alt="sakura_logo">
     <div>
-        <a class="navbar-link hide-mobile" id="navbar-link-german1" href="#menu-scroll">MENU</a>
-        <a class="navbar-link hide-mobile" id="navbar-link-german2" href="#map-scroll">LOCATIONS</a>
-        <a class="navbar-link hide-mobile" id="navbar-link-german3" href="#about-scroll">ABOUT</a>
+        <a class="navbar-link hide-mobile" id="navbar-link-german1" href="#menu-link">MENU</a>
+        <a class="navbar-link hide-mobile" id="navbar-link-german2" href="#menu-link">LOCATIONS</a>
+        <a class="navbar-link hide-mobile" id="navbar-link-german3" href="#how_to_order">ABOUT</a>
         <a class="navbar-link phone-btn" href="tel:+49(0)17654564534">
             <img class="phone-img" src="assets/img/1_hero/PNG/phone.png" alt="phone_logo">
             017654564534
