--- a/src/app/main-content/our-menu/our-menu.component.html
+++ b/src/app/main-content/our-menu/our-menu.component.html
@@ -1,4 +1,4 @@
-<section id="section3">
+<section class="section3" id="menu-link">
     <div class="menu" id="menu-scroll">
         <h2 class="menu-h2" id="menu-h2-german">OUR MENU</h2>
             <div class="menu-item1">
