--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -4,6 +4,6 @@
         <p class="footer-text">SAKURA RAMEN</p>
     </div>
     <div class="imprint">
-        <a href="#">Impressum</a>
+        <a href="imprint">Imprint</a>
     </div>
 </footer>
