--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -3,6 +3,7 @@ footer {
     justify-content: space-between;
     padding: 40px 160px 40px 160px;
     background-color: #0A141E;
+    overflow: hidden;
 
     .footer-logo {
         display: flex;
